--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>T-Shirt</title>
   <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="stylebaru.css">
+  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="banner.css">
   <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
 </head>
 
